<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TeamPlanBuch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>

</resources>
